# x1_wallet_firmware

./: .clang-format  .gitignore  .gitmodules  0x70D75D95C3A16AA7.asc  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE.md  README.md  SECURITY.md  STM32L486RGTX_FLASH.ld  STM32L486RGTX_RAM.ld  VERIFY.md  bn.c  message  shell.nix  startup_stm32l486xx.s  template.c  template.h  version.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: auto-tag-versions.yml  build-test.yml  build.yml  ci-test.yml  ci-tests.yml  containerized-build.yml  publish-docs.yml  version-check.yml
apps/bittensor_app/: bittensor_api.c  bittensor_api.h  bittensor_context.h  bittensor_helpers.c  bittensor_helpers.h  bittensor_main.c  bittensor_main.h  bittensor_priv.h  bittensor_pub_key.c  bittensor_sign_txn.c  bittensor_txn_helpers.c  bittensor_txn_helpers.h
apps/btc_app/: btc_api.c  btc_api.h  btc_app.c  btc_app.h  btc_app_priv.h  btc_helpers.c  btc_helpers.h  derive_address.c  get_public_key.c  get_xpub.c
apps/btc_family/: btc_api.c  btc_api.h  btc_context.h  btc_helpers.c  btc_helpers.h  btc_inputs_validator.c  btc_inputs_validator.h  btc_main.c  btc_main.h  btc_priv.h  btc_pub_key.c  btc_script.c  btc_script.h  btc_txn.c  btc_txn_helpers.c  btc_txn_helpers.h  btc_xpub.c
apps/constellation_app/: constellation_api.c  constellation_api.h  constellation_context.h  constellation_helpers.c  constellation_helpers.h  constellation_main.c  constellation_main.h  constellation_priv.h  constellation_pub_key.c  constellation_sign_msg.c  constellation_txn.c
apps/evm_family/: eip1159.c  eip1159.h  eip712_utils.c  eip712_utils.h  evm_api.c  evm_api.h  evm_context.h  evm_contracts.c  evm_contracts.h  evm_helpers.c  evm_helpers.h  evm_main.c  evm_main.h  evm_priv.h  evm_pub_key.c  evm_sign_msg.c  evm_sign_txn.c  evm_txn_helpers.c  evm_txn_helpers.h  evm_typed_data_helper.c  evm_typed_data_helper.h  evm_user_verification.c  evm_user_verification.h
apps/exchange_app/: exchange_api.c  exchange_api.h  exchange_close_flow.c  exchange_context.h  exchange_get_signature.c  exchange_initiate_flow.c  exchange_main.c  exchange_main.h  exchange_priv.h  exchange_store_signature.c
apps/hedera_app/: hedera_api.c  hedera_api.h  hedera_context.h  hedera_helpers.c  hedera_helpers.h  hedera_main.c  hedera_main.h  hedera_priv.h  hedera_pub_key.c  hedera_txn.c  index.md
apps/icp_app/: icp_api.c  icp_api.h  icp_context.h  icp_helpers.c  icp_helpers.h  icp_main.c  icp_main.h  icp_priv.h  icp_pub_key.c  icp_txn.c  icp_txn_helpers.c  icp_txn_helpers.h  icrc_canisters.c  icrc_canisters.h
apps/inheritance_app/: inheritance_api.c  inheritance_api.h  inheritance_app.c  inheritance_app.h  inheritance_auth_wallet.c  inheritance_context.h  inheritance_decrypt_data.c  inheritance_encrypt_data.c  inheritance_main.c  inheritance_main.h  inheritance_priv.h  inheritance_recovery.c  inheritance_recovery.h  inheritance_session.c  inheritance_setup.c  inheritance_setup.h  inheritance_wallet_auth.c  inheritance_wallet_auth.h  session_helpers.c  session_helpers.h  wallet_auth.c  wallet_auth.h  wallet_auth_helpers.h  wallet_sign.c
apps/manager_app/: auth_card.c  card_training.c  device_authentication.c  device_authentication_api.c  device_authentication_api.h  export_wallets.c  firmware_update.c  get_device_info.c  get_logs.c  joystick_training.c  manager_api.c  manager_api.h  manager_app.c  manager_app.h  manager_app_priv.h  user_training.c  wallet_selector.c
apps/mpc_poc/: mpc_api.c  mpc_api.h  mpc_child_key.c  mpc_child_key.h  mpc_context.h  mpc_dkg.c  mpc_dkg.h  mpc_dummy.c  mpc_dummy.h  mpc_get_random_nonce.c  mpc_get_random_nonce.h  mpc_group_setup.c  mpc_group_setup.h  mpc_helpers.c  mpc_helpers.h  mpc_main.c  mpc_main.h  mpc_mta.c  mpc_mta.h  mpc_sign_entity_info.c  mpc_sign_entity_info.h  mpc_sign_message.c  mpc_sign_message.h  mpc_verify_entity_info.c  mpc_verify_entity_info.h  mpc_wrapper.c  mpc_wrapper.h
apps/near_app/: near_api.c  near_api.h  near_context.c  near_context.h  near_helpers.c  near_helpers.h  near_main.c  near_main.h  near_priv.h  near_pub_key.c  near_txn.c  near_txn_helpers.c  near_txn_helpers.h  near_txn_user_verification.c  near_txn_user_verification.h
apps/solana_app/: solana_api.c  solana_api.h  solana_context.h  solana_contracts.c  solana_contracts.h  solana_helpers.c  solana_helpers.h  solana_main.c  solana_main.h  solana_priv.h  solana_pub_key.c  solana_sign_txn.c  solana_txn_helpers.c  solana_txn_helpers.h
apps/starknet/: starknet_api.h  starknet_context.h  starknet_crypto.c  starknet_helpers.c  starknet_helpers.h  starknet_pub_key.c  starknet_sign_txn.c
apps/starknet_app/: starkcurve.h  starknet_api.c  starknet_api.h  starknet_context.c  starknet_context.h  starknet_crypto.c  starknet_crypto.h  starknet_helpers.c  starknet_helpers.h  starknet_main.c  starknet_main.h  starknet_padersen.c  starknet_padersen.h  starknet_pedersen.c  starknet_pedersen.h  starknet_poseidon.c  starknet_poseidon.h  starknet_priv.h  starknet_pub_key.c  starknet_sign_txn.c
apps/stellar_app/: stellar_api.c  stellar_api.h  stellar_context.h  stellar_helpers.c  stellar_helpers.h  stellar_main.c  stellar_main.h  stellar_priv.h  stellar_pub_key.c  stellar_txn.c  stellar_txn_helpers.c  stellar_txn_helpers.h
common/: README.md  assert_conf.h  assert_def.c  lv_conf.h
docs/: bootloader.md  cylock__proof_of_work.md  device_provision_auth.md  nfc_card_operations.md  nfc_secure_communication.md  shamir_secret_sharing.md  usb_communication.md
doxygen/: Doxyfile
simulator/: README.md  lv_drv_conf.h  mouse_cursor_icon.c
src/: README.md  abi_decode.c  abi_decode.h  abi_decode_tests.c  app_error.h  constant_texts.c  constant_texts.h  controller_main.c  controller_main.h  desktop_listener.c  desktop_listener.h  global_variables.c  global_variables.h  main.c  manager.c  sdk_config.h  tasks.h  test_cases.c  test_cases.h  tlv_tests.c
tests/: unit_test_lists.c  unit_tests_main.c
utilities/: build.sh  formatter.sh  generate-protob.sh  install-hooks.sh  install-udev-rules.sh  run_unit_tests.sh
(+853 files in other folders)
